--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -23,10 +23,7 @@
     <ClCompile Include="CheeringPlayer.c" />
     <ClCompile Include="GameHelpScene.c" />
     <ClCompile Include="GameResultScene.c" />
-    <ClCompile Include="CapePlayer1.c" />
     <ClCompile Include="Camera.c" />
-    <ClCompile Include="CapeGameScene.c" />
-    <ClCompile Include="CapePlayer2.c" />
     <ClCompile Include="GameObject.c" />
     <ClCompile Include="GameScene.c" />
     <ClCompile Include="HomeScene.c" />
@@ -35,7 +32,6 @@
     <ClCompile Include="PlaneGameScene.c" />
     <ClCompile Include="ReadyStartScene.c" />
     <ClCompile Include="ScoreDisplay.c" />
-    <ClCompile Include="Spit.c" />
     <ClCompile Include="SpriteResources.c" />
     <ClCompile Include="WaveAudio.c" />
   </ItemGroup>
@@ -44,10 +40,7 @@
     <ClInclude Include="CheeringPlayer.h" />
     <ClInclude Include="GameHelpScene.h" />
     <ClInclude Include="GameResultScene.h" />
-    <ClInclude Include="CapePlayer1.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="CapeGameScene.h" />
-    <ClInclude Include="CapePlayer2.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="HomeScene.h" />
@@ -56,7 +49,6 @@
     <ClInclude Include="ReadyStartScene.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ScoreDisplay.h" />
-    <ClInclude Include="Spit.h" />
     <ClInclude Include="SpriteResources.h" />
     <ClInclude Include="WaveAudio.h" />
   </ItemGroup>
@@ -85,6 +77,7 @@
     <Image Include="Resource\player2_cheering.bmp" />
     <Image Include="Resource\player2_standing.bmp" />
     <Image Include="Resource\ready.bmp" />
+    <Image Include="Resource\score_board.bmp" />
     <Image Include="Resource\spit.bmp" />
     <Image Include="Resource\start.bmp" />
   </ItemGroup>
