--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -231,5 +231,11 @@
     <Image Include="Resource\dingding_disk.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resource\dingding_cheering.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\coco_cheering.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
