--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -264,5 +264,8 @@
     <Image Include="Resource\string.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resource\pull_background.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
