--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Flag.c" />
     <ClCompile Include="PullGameScene.c" />
     <ClCompile Include="String.c" />
     <ClCompile Include="ThrowingPlayer.c" />
@@ -38,6 +39,7 @@
     <ClCompile Include="WaveAudio.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Flag.h" />
     <ClInclude Include="PullGameScene.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="ThrowingPlayer.h" />
@@ -68,6 +70,7 @@
     <Image Include="Resource\coco_blowing.bmp" />
     <Image Include="Resource\coco_cheering.bmp" />
     <Image Include="Resource\coco_disk.bmp" />
+    <Image Include="Resource\coco_flag.bmp" />
     <Image Include="Resource\coco_plane.bmp" />
     <Image Include="Resource\coco_standing.bmp" />
     <Image Include="Resource\coco_throwing.bmp" />
@@ -76,6 +79,7 @@
     <Image Include="Resource\dingding_blowing.bmp" />
     <Image Include="Resource\dingding_cheering.bmp" />
     <Image Include="Resource\dingding_disk.bmp" />
+    <Image Include="Resource\dingding_flag.bmp" />
     <Image Include="Resource\dingding_plane.bmp" />
     <Image Include="Resource\dingding_standing.bmp" />
     <Image Include="Resource\dingding_throwing.bmp" />
