--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -279,5 +279,8 @@
     <Image Include="Resource\dingding_flag.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resource\disk_help.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
