--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -87,6 +87,7 @@
     <Image Include="Resource\dingding_won.bmp" />
     <Image Include="Resource\disk_background.bmp" />
     <Image Include="Resource\disk_help.bmp" />
+    <Image Include="Resource\disk_logo.bmp" />
     <Image Include="Resource\disk_shadow.bmp" />
     <Image Include="Resource\finish_flag.bmp" />
     <Image Include="Resource\now_blow.bmp" />
@@ -96,6 +97,8 @@
     <Image Include="Resource\player2_cheering.bmp" />
     <Image Include="Resource\player2_standing.bmp" />
     <Image Include="Resource\pull_background.bmp" />
+    <Image Include="Resource\pull_help.bmp" />
+    <Image Include="Resource\pull_logo.bmp" />
     <Image Include="Resource\ready.bmp" />
     <Image Include="Resource\score_board.bmp" />
     <Image Include="Resource\sky_background.bmp" />
