--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -282,5 +282,14 @@
     <Image Include="Resource\disk_help.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resource\pull_help.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\disk_logo.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\pull_logo.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
