--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -70,6 +70,10 @@
     <Image Include="Resource\coco_blowing.bmp" />
     <Image Include="Resource\coco_cheering.bmp" />
     <Image Include="Resource\coco_disk.bmp" />
+    <Image Include="Resource\coco_disk1.bmp" />
+    <Image Include="Resource\coco_disk2.bmp" />
+    <Image Include="Resource\coco_disk3.bmp" />
+    <Image Include="Resource\coco_disk4.bmp" />
     <Image Include="Resource\coco_flag.bmp" />
     <Image Include="Resource\coco_plane.bmp" />
     <Image Include="Resource\coco_standing.bmp" />
@@ -79,6 +83,10 @@
     <Image Include="Resource\dingding_blowing.bmp" />
     <Image Include="Resource\dingding_cheering.bmp" />
     <Image Include="Resource\dingding_disk.bmp" />
+    <Image Include="Resource\dingding_disk1.bmp" />
+    <Image Include="Resource\dingding_disk2.bmp" />
+    <Image Include="Resource\dingding_disk3.bmp" />
+    <Image Include="Resource\dingding_disk4.bmp" />
     <Image Include="Resource\dingding_flag.bmp" />
     <Image Include="Resource\dingding_plane.bmp" />
     <Image Include="Resource\dingding_standing.bmp" />
