Add line crossing effect

--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -94,7 +94,9 @@
     <Image Include="Resource\dingding_turn.bmp" />
     <Image Include="Resource\dingding_won.bmp" />
     <Image Include="Resource\disk_background.bmp" />
+    <Image Include="Resource\disk_crossed_line.bmp" />
     <Image Include="Resource\disk_help.bmp" />
+    <Image Include="Resource\disk_line.bmp" />
     <Image Include="Resource\disk_logo.bmp" />
     <Image Include="Resource\disk_shadow.bmp" />
     <Image Include="Resource\finish_flag.bmp" />
