--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -69,6 +69,7 @@
     <Image Include="Resource\cape_player2.bmp" />
     <Image Include="Resource\coco_blowing.bmp" />
     <Image Include="Resource\coco_cheering.bmp" />
+    <Image Include="Resource\coco_crying.bmp" />
     <Image Include="Resource\coco_disk.bmp" />
     <Image Include="Resource\coco_disk1.bmp" />
     <Image Include="Resource\coco_disk2.bmp" />
@@ -82,6 +83,7 @@
     <Image Include="Resource\coco_won.bmp" />
     <Image Include="Resource\dingding_blowing.bmp" />
     <Image Include="Resource\dingding_cheering.bmp" />
+    <Image Include="Resource\dingding_crying.bmp" />
     <Image Include="Resource\dingding_disk.bmp" />
     <Image Include="Resource\dingding_disk1.bmp" />
     <Image Include="Resource\dingding_disk2.bmp" />
