Change string pulling method

--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -110,6 +110,7 @@
     <Image Include="Resource\key_9.bmp" />
     <Image Include="Resource\now_blow.bmp" />
     <Image Include="Resource\no_ment.bmp" />
+    <Image Include="Resource\ok.bmp" />
     <Image Include="Resource\plane_background.bmp" />
     <Image Include="Resource\player1_cheering.bmp" />
     <Image Include="Resource\player1_standing.bmp" />
