--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -136,6 +136,17 @@
     <Image Include="Resource\player1_standing.bmp" />
     <Image Include="Resource\player2_cheering.bmp" />
     <Image Include="Resource\player2_standing.bmp" />
+    <Image Include="Resource\progress_0.bmp" />
+    <Image Include="Resource\progress_1.bmp" />
+    <Image Include="Resource\progress_10.bmp" />
+    <Image Include="Resource\progress_2.bmp" />
+    <Image Include="Resource\progress_3.bmp" />
+    <Image Include="Resource\progress_4.bmp" />
+    <Image Include="Resource\progress_5.bmp" />
+    <Image Include="Resource\progress_6.bmp" />
+    <Image Include="Resource\progress_7.bmp" />
+    <Image Include="Resource\progress_8.bmp" />
+    <Image Include="Resource\progress_9.bmp" />
     <Image Include="Resource\pull_background.bmp" />
     <Image Include="Resource\pull_help.bmp" />
     <Image Include="Resource\pull_logo.bmp" />
