--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="StoryScene.c">
       <Filter>Source Files\GameScenes\StoryMode</Filter>
     </ClCompile>
+    <ClCompile Include="Speech.c">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -190,6 +193,9 @@
     </ClInclude>
     <ClInclude Include="StoryScene.h">
       <Filter>Header Files\GameScenes\StoryMode</Filter>
+    </ClInclude>
+    <ClInclude Include="Speech.h">
+      <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
