--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="DanceGameScene.c" />
     <ClCompile Include="Dancer.c" />
+    <ClCompile Include="Delay.c" />
     <ClCompile Include="Flag.c" />
     <ClCompile Include="KeyInput.c" />
     <ClCompile Include="PullGameScene.c" />
@@ -46,6 +47,7 @@
   <ItemGroup>
     <ClInclude Include="DanceGameScene.h" />
     <ClInclude Include="Dancer.h" />
+    <ClInclude Include="Delay.h" />
     <ClInclude Include="Flag.h" />
     <ClInclude Include="KeyInput.h" />
     <ClInclude Include="PullGameScene.h" />
