Add timetable story scene

--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -161,6 +161,7 @@
     <Image Include="Resource\sky_background.bmp" />
     <Image Include="Resource\spit.bmp" />
     <Image Include="Resource\start.bmp" />
+    <Image Include="Resource\story_timetable.bmp" />
     <Image Include="Resource\string.bmp" />
     <Image Include="Resource\teacher_help.bmp" />
     <Image Include="Resource\wrong.bmp" />
